--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.1.1",
+    "terser": "^5.44.1",
     "vite": "^5.0.10"
   }
 }
